--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Task_manager"
         tools:targetApi="31">
         <activity
+            android:name=".ui.taskdetail.TaskDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Task_manager.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
